# jujube

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  TODO.md  build_linux.sh  make_release.sh  meson.build
assets/markers/long/classic/: long.json
assets/markers/tap/jubeat analyser/: marker.json
docs/: Compiling.md  Folder Structure.md
include/: memon.hpp
include/imgui/: imconfig.h
include/imgui-sfml/: imgui-SFML.cpp
include/memon/: memon.hpp
include/whereami/: whereami++.cpp  whereami++.hpp  whereami.c
src/: Main.cpp
src/Data/: Buttons.cpp  Buttons.hpp  Chart.cpp  Chart.hpp  GradedNote.cpp  GradedNote.hpp  KeyMaping.cpp  KeyMaping.hpp  KeyMapping.cpp  KeyMapping.hpp  MappableKeys.cpp  MappableKeys.hpp  Note.cpp  Note.hpp  Preferences.cpp  Preferences.hpp  Score.cpp  Score.hpp  Song.cpp  Song.hpp  SongList.cpp  SongList.hpp  TimeBounds.hpp
src/Drawables/: BlackFrame.cpp  BlackFrame.hpp  ButtonHighlight.cpp  ButtonHighlight.hpp  DensityGraph.cpp  DensityGraph.hpp  GradedDensityGraph.cpp  GradedDensityGraph.hpp
src/Input/: Buttons.cpp  Buttons.hpp  Events.cpp  Events.hpp  KeyMapping.cpp  KeyMapping.hpp  MappableKeys.cpp  MappableKeys.hpp
src/Model/: Chart.hpp  MusicList.cpp  MusicList.hpp  Score.hpp
src/Resources/: Autoloader.cpp  Autoloader.hpp  CoverAtlas.cpp  CoverAtlas.hpp  LNMarker.cpp  LNMarker.hpp  Marker.cpp  Marker.hpp  SharedResources.cpp  SharedResources.hpp  SplitSpriteSheet.cpp  SplitSpriteSheet.hpp  SpriteSheet.cpp  SpriteSheet.hpp  TextureCache.cpp  TextureCache.hpp
src/Screens/: Gameplay.hpp  MusicSelect.hpp  Result.hpp
src/Screens/Gameplay/: AbstractMusic.hpp  Gameplay.cpp  Gameplay.hpp  GradedNote.cpp  GradedNote.hpp  PreciseMusic.cpp  PreciseMusic.hpp  Resources.hpp  Silence.cpp  Silence.hpp  TimedEventsQueue.cpp  TimedEventsQueue.hpp
src/Screens/Gameplay/Drawables/: Cursor.cpp  Cursor.hpp  Shutter.cpp  Shutter.hpp
src/Screens/MusicSelect/: ButtonHighlight.cpp  ButtonHighlight.hpp  DensityGraph.cpp  DensityGraph.hpp  MusicPreview.cpp  MusicPreview.hpp  MusicSelect.cpp  MusicSelect.hpp  OptionMenu.hpp  OptionPage.cpp  OptionPage.hpp  Panel.cpp  Panel.hpp  PanelLayout.cpp  PanelLayout.hpp  Resources.cpp  Resources.hpp  Ribbon.cpp  Ribbon.hpp  SharedResources.cpp  SharedResources.hpp  SongInfo.cpp  SongInfo.hpp  State.cpp  State.hpp
src/Screens/MusicSelect/Drawables/: ControlPanels.cpp  ControlPanels.hpp
src/Screens/MusicSelect/Options/: AudioOffset.cpp  AudioOffset.hpp  InputRemap.cpp  InputRemap.hpp  OptionPage.cpp  OptionPage.hpp
src/Screens/MusicSelect/Panels/: MarkerPanel.cpp  MarkerPanel.hpp  Panel.cpp  Panel.hpp  SubpagePanel.cpp  SubpagePanel.hpp
src/Screens/Results/: Resources.hpp  Results.cpp  Results.hpp
src/Textures/: CoverPack.cpp  CoverPack.hpp  JacketPack.cpp  JacketPack.hpp
src/Toolkit/: AffineTransform.hpp  Cache.hpp  Debuggable.hpp  DurationInFrames.hpp  EasingFunctions.cpp  EasingFunctions.hpp  GHCFilesystemPathHash.hpp  HSL.cpp  HSL.hpp  NormalizedOrigin.hpp  QuickRNG.cpp  QuickRNG.hpp  SFMLHelpers.cpp  SFMLHelpers.hpp
src/Toolkit/ExtraCerealTypes/: GHCFilesystemPath.hpp
test/: cereal_specialize_enums.cpp  cereal_specialize_path.cpp  cereal_unordered_map.cpp  imgui-sfml-demo.cpp  meson.build
utils/: copy_dependencies.py  jb+_to_jujube_marker.py  requirements.txt  spritesheet_maker.py  spritesheet_spliter.py  test_songs_generator.py
